# traffic-burst-handler

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: pytest.yml
k8s/: ingress-monitoring-ingress.yml  k8s-monitoring-ingress.yml  php-apache-ingress.yml  php-apache.yml  scaler-cron.yml
rushguard/: settings.py
rushguard/cli/: main.py
rushguard/cli/commands/: metric.py  resource.py
rushguard/metric/: ingress.py  qps.py  resource.py  rt.py
rushguard/scaler/: buffer.py  resource.py
rushguard/simulator/: runner.py
rushguard/utils/: buffer.py  graph.py  math.py
scripts/: run_scaler.sh
tests/: patterns.csv
tests/loadtest/: locustfile.py  traffic_patterns.py
