[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["lesimor <lesimor@naver.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
autoflake = ">=1.4.0,<1.5.0"
flake8 = ">=3.8.3,<3.9.0"
pre-commit = ">=2.17.0,<2.18.0"
black = "22.3.0"
isort = "5.10.1"
pylint = ">= 2.15.10,<2.16.0"
mypy = "1.2.0"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.mypy]
ignore_missing_imports = true
